--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "husky": "^8.0.3",
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,9 +26,11 @@
     "@testing-library/react": "^14.0.0",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.0",
     "sass": "^1.63.6"
   }
 }
